# template-poetry-docker

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
