[tool.poetry]
name = "template-poetry-docker"
version = "0.1.0"
description = "A starting point for python apps using poetry and docker."
authors = ["Teghan Nightengale <tnightengale@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
