[tool.poetry]
name = "template-poetry-docker"
version = "0.1.2"
description = "A starting point for Python apps using Poetry and Docker."
authors = ["Teghan Nightengale <tnightengale@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
